--- a/app2/estilo.css
+++ b/app2/estilo.css
@@ -2,3 +2,13 @@
 	width: 50px;
 	heigth: 50px;
 }
+
+.mosquito2 {
+	width: 70px;
+	heigth: 70px;
+}
+
+.mosquito3 {
+	width: 90px;
+	heigth: 90px;
+}
